fixed spacing issues

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -199,7 +199,7 @@ ng-otp-input {
 }
 
 .get-notified-block {
-  margin-top: 50px;
+  margin-top: 5%;
   .title {
     font-size: 30px;
     text-transform: uppercase;
